compiler/testData/asJava/lightClasses/compilationErrors/PrivateInTrait.java
public interface PrivateInTrait {
    final class DefaultImpls {
        private static java.lang.String getNn(PrivateInTrait $this) { /* compiled code */ }

        private static void setNn(PrivateInTrait $this, java.lang.String value) { /* compiled code */ }

        private static java.lang.String getN(PrivateInTrait $this) { /* compiled code */ }
    }
}